# turnstile

./: COPYING.md  README.md  cfg_utils.cc  dinit-run-dbus  dinit-userservd  dinit-userservd.cc  dinit-userservd.conf  dinit-userservd.conf.5.scd.in  dinit-userservd.conf.in  dinit-userservd.hh  dinit_utils.cc  fs_utils.cc  meson.build  meson_options.txt  pam_dinit_userservd.cc  protocol.hh  turnstiled  turnstiled.conf.5.scd.in  turnstiled.conf.in
backend/: dinit  dinit.conf  meson.build  runit  runit.conf  s6  s6.conf  turnstile-update-runit-env.in
data/dinit/: turnstiled
data/pam/: turnstiled
include/: turnstile.h
src/: cfg_utils.cc  dinit-userservd.8.scd  dinit-userservd.cc  dinit-userservd.hh  dinit_utils.cc  exec_utils.cc  fs_utils.cc  lib_api.c  lib_api.h  lib_backend_none.c  lib_backend_none.h  lib_backend_turnstile.c  pam_dinit_userservd.8.scd  pam_dinit_userservd.cc  pam_turnstile.8.scd  pam_turnstile.cc  protocol.hh  turnstiled.8.scd  turnstiled.cc  turnstiled.hh  utils.cc  utils.hh
