option('dinit',
    type: 'feature', value: 'enabled',
    description: 'Whether to install Dinit-related backend and data'
)

option('rundir',
    type: 'string', value: '/run',
    description: 'Where the base directory will be located'
)

option('statedir',
    type: 'string', value: 'lib/turnstiled',
    description: 'The state directory relative to localstatedir'
)

option('pam_moddir',
    type: 'string', value: '',
    description: 'Where to install the PAM module (leave empty to autodetect)'
)

option('manage_rundir',
   type: 'boolean', value: false,
   description: 'Whether to manage rundir by default'
)

option('man',
   type: 'boolean', value: true,
   description: 'Whether to generate manpages'
)

